integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_tests__mpl_core_get_asset_with_oracle_no_offset.snap
---
source: integration_tests/tests/integration_tests/mpl_core_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "MplCoreAsset",
  "id": "2TZpUiBiyMdwLFTKRshVMHK8anQK2W8XXbfUfyxR8yvc",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/asset",
    "files": [],
    "metadata": {
      "name": "Test Asset",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7"
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "plugins": {},
  "mpl_core_info": {
    "plugins_json_version": 1
  },
  "external_plugins": [
    {
      "type": "Oracle",
      "index": 0,
      "offset": 119,
      "authority": {
        "type": "UpdateAuthority",
        "address": null
      },
      "adapter_config": {
        "base_address": "J9JBrE7Jravcpc7Px1iWSXTdvA2Kgt5yB5kQoWSvoQFo",
        "results_offset": "NoOffset",
        "base_address_config": null
      },
      "lifecycle_checks": {
        "burn": [
          "CanReject"
        ]
      }
    }
  ],
  "is_agent": false,
  "asset_signer": "BGX5TJoxFkrUbuwqo1NXP8ExHMoZW9LM9h1A5cSJ7muA"
}
