integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_tests__mpl_core_get_asset_with_two_oracle_external_plugins.snap
---
source: integration_tests/tests/integration_tests/mpl_core_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "MplCoreAsset",
  "id": "4aarnaiMVtGEp5nToRqBEUGtqY2F1gW2V8bBQe1rN5V9",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/asset",
    "files": [],
    "metadata": {
      "name": "new name 2",
      "symbol": ""
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7"
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "plugins": {},
  "mpl_core_info": {
    "plugins_json_version": 1
  },
  "external_plugins": [
    {
      "type": "Oracle",
      "index": 0,
      "offset": 119,
      "authority": {
        "type": "UpdateAuthority",
        "address": null
      },
      "adapter_config": {
        "base_address": "655aWrKDz4hNFGaSzxmT9xuwxTKPrvb5SMDohCfVFCXL",
        "results_offset": "Anchor",
        "base_address_config": null
      },
      "lifecycle_checks": {
        "update": [
          "CanReject"
        ]
      }
    },
    {
      "type": "Oracle",
      "index": 1,
      "offset": 154,
      "authority": {
        "type": "UpdateAuthority",
        "address": null
      },
      "adapter_config": {
        "base_address": "6CGzRzs53RppPfSimeEjEYhKMagP9rT9zZrEVVgjSq7A",
        "results_offset": "Anchor",
        "base_address_config": null
      },
      "lifecycle_checks": {
        "update": [
          "CanReject"
        ]
      }
    }
  ],
  "is_agent": false,
  "asset_signer": "4b98qaK8Jqix5uuF3nVqY4GNd5CtNYctT36L3C8bC6DC"
}
