integration_tests/tests/integration_tests/snapshots/integration_tests__mpl_core_tests__mpl_core_get_assets_by_group_with_oracle_and_custom_pda_all_seeds.snap
---
source: integration_tests/tests/integration_tests/mpl_core_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "total": 1,
  "limit": 50,
  "page": 1,
  "items": [
    {
      "interface": "MplCoreAsset",
      "id": "CWJDcrzxSDE7FeNRzMK1aSia7qoaUPrrGQ81E7vkQpq4",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://example.com/asset",
        "files": [],
        "metadata": {
          "name": "Test Asset",
          "symbol": ""
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "APrZTeVysBJqAznfLXS71NAzjr2fCVTSF1A66MeErzM7",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "Do7rVGmVNa9wjsKNyjoa5phqriLER6HCqUQm5zyoTX3f"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "single",
        "owner": "FAe4nM85BQ8b1nWEc5TTeogQGnNDWsuGYU84vuiPc7kE"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "plugins": {},
      "mpl_core_info": {
        "plugins_json_version": 1
      },
      "external_plugins": [
        {
          "type": "Oracle",
          "index": 0,
          "offset": 119,
          "authority": {
            "type": "UpdateAuthority",
            "address": null
          },
          "adapter_config": {
            "base_address": "4RZ7RhXeL4oz4kVX5fpRfkNQ3nz1n4eruqBn2AGPQepo",
            "results_offset": "Anchor",
            "base_address_config": {
              "custom_pda": {
                "seeds": [
                  "Collection",
                  "Owner",
                  "Recipient",
                  "Asset",
                  {
                    "address": "HmQ75Sraz5HoTzVGpMuepXVgxwfiKyN5Mar8NxDqL9dh"
                  },
                  {
                    "bytes": [
                      101,
                      120,
                      97,
                      109,
                      112,
                      108,
                      101,
                      45,
                      115,
                      101,
                      101,
                      100,
                      45,
                      98,
                      121,
                      116,
                      101,
                      115
                    ]
                  }
                ],
                "is_signer": false,
                "is_writable": false,
                "custom_program_id": null
              }
            }
          },
          "lifecycle_checks": {
            "transfer": [
              "CanReject"
            ]
          }
        }
      ],
      "is_agent": false,
      "asset_signer": "8K6GCah36Dri7wNbS7p9KprHpe6theoE697Ch1Rk8JBw"
    }
  ]
}
